<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/whiteColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SplashScreen2Activity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="15dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                app:civ_border_width="4dp"
                app:civ_border_color="@color/whiteColor"
                android:layout_gravity="center"
                android:src="@drawable/admin"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp"
                android:layout_width="140dp"
                android:layout_height="140dp" />
            <TextView
                android:gravity="center"
                android:text="@string/name"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="@color/whiteColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:gravity="center"
                android:text="@string/designation"
                android:textSize="16dp"
                android:textColor="@color/lightGreyColor"
                android:layout_marginBottom="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:padding="15dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textAlignment="center"
                android:text="@string/summary"
                android:textSize="16dp"
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <View
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <TextView
                android:text="@string/experience_title"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_marginBottom="15dp"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/experience"
                android:textSize="16dp"
                android:layout_marginBottom="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/start_button"
                android:text="START"
                android:layout_marginBottom="15dp"
                android:textColor="@color/whiteColor"
                android:background="@color/colorPrimary"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>