<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/whiteColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="15dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/nav_header_photo"
            app:civ_border_width="2dp"
            android:layout_gravity="center"
            app:civ_border_color="@color/colorAccent"
            android:src="@drawable/admin"
            android:layout_marginBottom="15dp"
            android:layout_width="140dp"
            android:layout_height="140dp" />
        <!--<ImageView
            android:src="@drawable/admin"
            android:background="@drawable/image_border"
            android:layout_marginBottom="25dp"
            android:layout_width="140dp"
            android:layout_height="140dp" />-->

        <TextView
            android:text="@string/name"
            android:textAlignment="center"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/designation"
            android:textAlignment="center"
            android:textSize="16dp"
            android:layout_marginBottom="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!--<TextView
            android:text="@string/mailing_title"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/mailing_address"
            android:textSize="16dp"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />-->

        <!--<TextView
            android:text="@string/summary_title"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />-->
        <TextView
            android:text="@string/summary"
            android:textAlignment="center"
            android:textSize="16dp"
            android:layout_marginBottom="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!--<TextView
            android:text="@string/experience_title"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/experience"
            android:textSize="16dp"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />-->

    </LinearLayout>
</ScrollView>